Upload awal proyek magang

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
 
 
-      <!--product ke6-->
+    <!--product ke6-->
       <div class="row align-items-center mb-5">
         <div class="col-md-6 mb-4 mb-md-0">
             <img src="img/720S.jpg" class="img-fluid rounded shadow" alt="McLaren 720S">
@@ -157,9 +157,66 @@
         </div>
       </div>
 
+
+    <!-- product ke7 -->
+      <div class="row align-items-center mb-5">
+        <div class="col-md-6 mb-4 mb-md-0">
+            <img src="img/download (20).jpg" class="img-fluid rounded shadow" alt="Bugatti Chiron">
+        </div>
+        <div class="col-md-6">
+            <h2 class="product-title">Bugatti Chiron</h2>
+            <ul class="product-specs">
+                <li><strong>Mesin:</strong>8.0L Quad-Turbo W16</li>
+                <li><strong>Tenaga:</strong>1.479 hp (1.103 kW)</li>
+                <li><strong>0-100 km/jam:</strong> 2,4 detik</li>
+                <li><strong>Top Speed:</strong>420 km/jam</li>
+            </ul>
+            <h4 class="product-price">Harga: Rp Rp 48 Miliar </h4>
+            <a href="#" class="btn btn-pink px-4 py-2">Beli Sekarang</a>
+        </div>
+      </div>
+
+    <!-- product ke8 -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="img/Bugatti Bolide.jpg" class="img-fluid rounded shadow" alt="Bugatti Bolide">
+            </div>
+            <div class="col-md-6">
+                <h2 class="product-title">Bugatti Bolide</h2>
+                <ul class="product-specs">
+                    <li><strong>Mesin:</strong>8.0L Quad-Turbo W16</li>
+                    <li><strong>Tenaga:</strong>1.824 hp</li>
+                    <li><strong>0-100 km/jam:</strong>2,2 detik</li>
+                    <li><strong>Top Speed:</strong>500 km/jam</li>
+                </ul>
+            <h4 class="product-price">Harga: Rp 64 M</h4>
+            <a href="#" class="btn btn-pink px-4 py-2">Beli Sekarang</a>
+        </div>
+    </div>
+
+    <!-- product ke9 -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="img/Bugatti Divo _ 2019MY _ Front Three-Quarter.jpg" class="img-fluid rounded shadow" alt="Bugatti Divo">
+            </div>
+            <div class="col-md-6">
+                <h2 class="product-title">Bugatti Divo</h2>
+                <ul class="product-specs">
+                    <li><strong>Mesin:</strong>8.0L Quad-Turbo W16</li>
+                    <li><strong>Tenaga:</strong>1.479 hp</li>
+                    <li><strong>0-100 km/jam:</strong> 2,4 detik</li>
+                    <li><strong>Top Speed:</strong> 380 km/jam</li>
+                </ul>
+            <h4 class="product-price">Harga: Rp  92 M </h4>
+            <a href="#" class="btn btn-pink px-4 py-2">Beli Sekarang</a>
+        </div>
+    </div>
+
+
           </div>
   </section>
 
+ 
 <!--Contact  -->
   <section id="contact" class="contact">
     <div class="container">
